--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 * text eol=lf
+*.png binary
 
 # Custom for Visual Studio
 *.cs     diff=csharp
