--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-# Mockup folder
-Copacetic mockup - Imgur/*
-extras/backgrounds_test/*
+# Skin shortcuts
+16x9/script-skinshortcuts-includes.xml
 
 # Windows image file caches
 Thumbs.db
